--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
-language: node_js
-before_install:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
+language: 
+  node_js
 node-js:
   - 12.18.3
+services:
+  - xvfb
+addons:
+    firefox: stable
+before_install:
+  - "export DISPLAY=:99.0"
